# bdrpc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTES.md  README.md
.bob/rules/: myrules.md
bdrpc/: Cargo.toml
bdrpc-macros/: Cargo.toml  expand_output.txt
bdrpc-macros/src/: generate.rs  lib.rs  parse.rs
bdrpc-macros/tests/: backward_compatibility.rs  expand.rs  test_future_methods.rs
bdrpc/benches/: README.md  latency.rs  throughput.rs
bdrpc/examples/: advanced_channels.rs  auto_reconnect_client.rs  calculator_manual.rs  calculator_service.rs  canonical_example.rs  channel_basics.rs  chat_server.rs  chat_server_manual.rs  chat_server_service.rs  concurrent_calculator.rs  dynamic_channels_manual.rs  dynamic_channels_service.rs  echo_server_manual.rs  endpoint_builder.rs  file_transfer_manual.rs  file_transfer_service.rs  file_transfer_service_async.rs  future_methods_demo.rs  hello_world.rs  hello_world_service.rs  mtls_demo.rs  mtls_reconnect_manual.rs  multi_transport_server.rs  network_chat.rs  quic_client.rs  quic_server.rs  service_macro_demo.rs  transport_failover.rs  websocket_client.rs  websocket_server.rs
bdrpc/examples/archive/: auto_reconnect_client.rs  chat_server_service.rs  complete_server_client_demo.rs  concurrent_calculator.rs  dynamic_channels_service.rs  file_transfer_manual.rs  file_transfer_service_async.rs  gateway_server_example.rs  hello_world_service.rs  mtls_demo.rs  mtls_reconnect_manual.rs  quic_client.rs  server_setup_guide.rs  service_macro_demo.rs  tcp_gateway_server.rs  transport_failover.rs  websocket_server.rs
bdrpc/src/: channel.rs  error.rs  lib.rs  observability.rs  serialization.rs  transport.rs
bdrpc/src/backpressure/: bounded_queue.rs  mod.rs  traits.rs  unlimited.rs
bdrpc/src/channel/: bridge.rs  channel.rs  correlation.rs  envelope.rs  error.rs  id.rs  manager.rs  mod.rs  pending.rs  router.rs  rpc.rs  system.rs  tests.rs
bdrpc/src/endpoint/: builder.rs  config.rs  direction.rs  endpoint.rs  error.rs  handshake.rs  mod.rs  negotiator.rs
bdrpc/src/observability/: correlation.rs  health.rs  metrics.rs
bdrpc/src/reconnection/: circuit_breaker.rs  exponential.rs  fixed.rs  mod.rs  no_reconnect.rs  traits.rs
bdrpc/src/serialization/: buffer_pool.rs  error.rs  framing.rs  json.rs  mod.rs  postcard.rs  rkyv_impl.rs  traits.rs
bdrpc/src/transport/: caller.rs  compression.rs  config.rs  enhanced.rs  error.rs  manager.rs  memory.rs  mod.rs  provider.rs  quic.rs  strategy.rs  tcp.rs  tls.rs  traits.rs  types.rs  websocket.rs
bdrpc/src/transport/provider/: memory.rs  quic.rs  websocket.rs
bdrpc/src/transport/strategy/: circuit_breaker.rs  exponential.rs  fixed.rs  no_reconnect.rs  traits.rs
bdrpc/tests/: channel_negotiation.rs  cross_transport_compatibility.rs  error_observability.rs  error_recovery.rs  network_failure_recovery.rs  protocol_negotiation.rs  quic_integration.rs  rpc_correlation.rs  server_accept_integration.rs  stress_tests.rs  stress_transport_manager.rs  transport_manager_integration.rs  websocket_integration.rs
docs/: README.md  accept_channels_comparison.md  architecture-guide.md  best-practices.md  deadlock-prevention.md  discovered-issues.md  error-recovery.md  performance-guide.md  protocol-evolution.md  quic-transport.md  quick-start.md  streaming-pattern.md  transport-configuration.md  troubleshooting-guide.md  websocket-transport.md
docs/ADR/: ADR-001-core-architecture.md  ADR-002-reconnection-strategy.md  ADR-003-backpressure-flow-control.md  ADR-004-error-handling-hierarchy.md  ADR-005-serialization-strategy.md  ADR-006-protocol-evolution-versioning.md  ADR-007-message-ordering-guarantees.md  ADR-008-protocol-directionality.md  ADR-009-frame-integrity-checking.md  ADR-010-dynamic-channel-negotiation.md  ADR-011-large-transfer-streaming.md  ADR-012-channel-transport-coupling.md  ADR-013-enhanced-transport-manager.md
docs/archive/: RELEASE_CHECKLIST.md  blog-announcement-v0.1.0.md  diagrams.md  error-recovery.md  migration-guide-correlation.md  migration-guide-v0.2.0.md  migration-guide.md  performance-guide.md  protocol-evolution.md  quic-transport.md  quick-start.md  streaming-pattern.md  transport-configuration.md
docs/dev/: transport-manager-enhancement-plan.md
