[workspace]
members = ["bdrpc", "bdrpc-macros"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Hans W. Uhlig"]
license = "Apache-2.0"
repository = "https://github.com/huhlig/bdrpc"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc"] }
serde_json = { version = "1.0" }
rkyv = { version = "0.8" }

# Proc macro dependencies
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Tracing and metrics
tracing = { version = "0.1" }
metrics = { version = "0.24" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"